<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_school_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_text_school_name"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_text_location"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_text_phone"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_text_email"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_webpage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_text_webpage"
            android:gravity="center"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>